# winsshui

./: .gitignore  README.md  build.py  pyproject.toml  requirements-build.txt  winsshui-askpass.spec  winsshui.spec
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
installer/: winsshui.iss
src/winsshui/: __init__.py  __main__.py  app.py  askpass.py  backup.py  catalog.py  credentials.py  device_icons.py  diagnostics.py  dialogs.py  embedded_terminal.py  health_dialog.py  host_keys.py  importers.py  key_install.py  logging_utils.py  main_window.py  models.py  process_inspection.py  productivity_dialogs.py  resources.py  ssh_config.py  ssh_keys.py  ssh_writer.py  terminal.py  transfer_dialog.py  transfers.py  tunnels.py  updates.py
tests/python/: test_backup.py  test_catalog.py  test_credentials.py  test_device_icons.py  test_diagnostics.py  test_embedded_terminal.py  test_host_keys.py  test_importers.py  test_key_install.py  test_logging_utils.py  test_main_window.py  test_process_inspection.py  test_ssh_config.py  test_ssh_keys.py  test_ssh_writer.py  test_terminal.py  test_transfers.py  test_tunnels.py  test_updates.py
